add fonts, more basic style

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Hudson</title>
 </head>
 <body>
+    <div id="bg-image"></div>
     <nav>
         <ul>
             <li>Home</li>
@@ -17,9 +18,9 @@
         </ul>
     </nav>
     <main class="home-container">
-        <img src="./resources/images/IMG_5840.JPG" alt="photo of me" id="my-photo">
         <h1>Hi, I'm Hudson</h1>
-        <p>I'm a <span>programmer</span> and <span>graphic designer</span> based in California. Click below to check out my <span>portfolio</span>, and see what I'm capable of!</p>
+        <p class="text">I'm a <span class="blue">programmer</span> and <span class="blue">graphic designer</span class="blue"> based in California. Click below to check out my <span class="blue">portfolio</span>, and see what I'm capable of!</p>
+        <img src="./resources/images/IMG_5840.JPG" alt="photo of me" id="my-photo">
     </main>
 </body>
 </html>
