change li to span, making header

--- a/index.html
+++ b/index.html
@@ -8,14 +8,11 @@
     <title>Hudson</title>
 </head>
 <body>
-    <div id="bg-image"></div>
     <nav>
-        <ul>
-            <li>Home</li>
-            <li>About Me</li>
-            <li>Projects</li>
-            <li>Contact Me</li>
-        </ul>
+        <span>Home</span>
+        <span>About Me</span>
+        <span>Projects</span>
+        <span>Contact Me</span>
     </nav>
     <main class="home-container">
         <h1>Hi, I'm Hudson</h1>
