--- a/index.html
+++ b/index.html
@@ -9,15 +9,19 @@
 </head>
 <body>
     <nav>
-        <span>Home</span>
-        <span>About Me</span>
-        <span>Projects</span>
-        <span>Contact Me</span>
+        <ul>
+            <li class="text">Home</li>
+            <li>About Me</li>
+            <li>Projects</li>
+            <li>Contact Me</li>
+        </ul>
     </nav>
-    <main class="home-container">
-        <h1>Hi, I'm Hudson</h1>
-        <p class="text">I'm a <span class="blue">programmer</span> and <span class="blue">graphic designer</span class="blue"> based in California. Click below to check out my <span class="blue">portfolio</span>, and see what I'm capable of!</p>
-        <img src="./resources/images/IMG_5840.JPG" alt="photo of me" id="my-photo">
+    <main>
+        <section id="home-container">
+            <h1>Hi, I'm Hudson</h1>
+            <p class="text">I'm a <span class="blue">programmer</span> and <span class="blue">graphic designer</span> based in California. Click below to check out my <span class="blue">portfolio</span>, and see what I'm capable of!</p>
+            <img src="./resources/images/IMG_5840.JPG" alt="photo of me" id="my-photo">
+        </section>
     </main>
 </body>
 </html>
