--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <ul>
-            <li class="text">Home</li>
+            <li>Home</li>
             <li>About Me</li>
             <li>Projects</li>
             <li>Contact Me</li>
@@ -18,9 +18,11 @@
     </nav>
     <main>
         <section id="home-container">
-            <h1>Hi, I'm Hudson</h1>
-            <p class="text">I'm a <span class="blue">programmer</span> and <span class="blue">graphic designer</span> based in California. Click below to check out my <span class="blue">portfolio</span>, and see what I'm capable of!</p>
             <img src="./resources/images/IMG_5840.JPG" alt="photo of me" id="my-photo">
+            <div id='text-container'>
+                <h1>Hi, I'm Hudson</h1>
+                <p class="text">I'm a <span class="blue">programmer</span> and <span class="blue">graphic designer</span> based in California. Click below to check out my <span class="blue">portfolio</span>, and see what I'm capable of!</p>
+            </div>
         </section>
     </main>
 </body>
