complete first page, add darrow and slightly change nav

--- a/index.html
+++ b/index.html
@@ -10,20 +10,21 @@
 <body>
     <nav>
         <ul>
-            <li>Home</li>
-            <li>About Me</li>
-            <li>Projects</li>
-            <li>Contact Me</li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about-me">About Me</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact-me">Contact Me</a></li>
         </ul>
     </nav>
     <main>
-        <section id="home-container">
+        <section id="home">
             <img src="./resources/images/IMG_5840.JPG" alt="photo of me" id="my-photo">
             <div id='text-container'>
                 <h1>Hi, I'm Hudson</h1>
                 <p class="text">I'm a <span class="blue">programmer</span> and <span class="blue">graphic designer</span> based in California. Click below to check out my <span class="blue">portfolio</span>, and see what I'm capable of!</p>
             </div>
         </section>
+        <img src="./resources/images/Darrow.svg" alt="Down arrow" id="darrow">
     </main>
 </body>
 </html>
