--- a/index.html
+++ b/index.html
@@ -17,14 +17,32 @@
         </ul>
     </nav>
     <main>
-        <section id="home">
-            <img src="./resources/images/IMG_5840.JPG" alt="photo of me" id="my-photo">
-            <div id='text-container'>
-                <h1>Hi, I'm Hudson</h1>
-                <p class="text">I'm a <span class="blue">programmer</span> and <span class="blue">graphic designer</span> based in California. Click below to check out my <span class="blue">portfolio</span>, and see what I'm capable of!</p>
-            </div>
+        <section class="animation">
+            <img class="paper-plane" src="./resources/images/paper-plane-vector-logo_166426-original.png" alt="Paper Plane">
         </section>
-        <img src="./resources/images/Darrow.svg" alt="Down arrow" id="darrow">
+        <section id="home">
+            <div id="home-container">
+                <img src="./resources/images/IMG_5840.JPG" alt="photo of me" id="my-photo">
+                <div id='text-container'>
+                    <h1>Hi, I'm Hudson</h1>
+                    <p class="text">I'm a <span class="blue">programmer</span> and <span class="blue">graphic designer</span> based in California. Click below to check out my <span class="blue">portfolio</span>, and see what I'm capable of!</p>
+                </div>
+            </div>
+            <img src="./resources/images/Darrow.svg" alt="Down arrow" id="darrow">
+        </section>
     </main>
+
+
+
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/jquery.ScrollMagic.min.js" integrity="sha512-RoCOXSeYXosX4PjvRhUz0X+pmdhOJJkbjYZzmZ9dS1Iy9E/WnkTqMy+LVkPX3BV0ZgSFB2AYQKfi6ZKdNdXJnQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/debug.addIndicators.min.js" integrity="sha512-RvUydNGlqYJapy0t4AH8hDv/It+zKsv4wOQGb+iOnEfa6NnF2fzjXgRy+FDjSpMfC3sjokNUzsfYZaZ8QAwIxg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/animation.gsap.min.js" integrity="sha512-5/OHwmQzDSBS0Ous4/hlYoWLHd06/d2r7LdKZQVBXOA6PvOqWVXtdboiLTU7lQTGyVoKVTNkwi0ol4gHGlw5ww==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.0/TweenLite.min.js" integrity="sha512-mKA3liL2BLGZFmHAbSj5NhyBNBWiFc/OBuCoUiSGKU2Jxp5G7oe6+DRDTO6wEMG7aoQJjlvTt3JB+ywHpHB6tQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.0/TimelineLite.min.js" integrity="sha512-fwJ2p3DY0tF2y43T+6R3M7QM9Yk/1SBhCNW5ZcYi13KkMucBIgbjuTbfoE+QmbDUiZFz8idZ6vbs8QlpxtsAdQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.0/plugins/CSSPlugin.min.js" integrity="sha512-ocsFo48WU8Xq6Y1Lwi7psXRAujG9E4TKNR4q1DbrKzaaxOMTEoao/a+mDoB+cYzY4lwbyxvqjkp/ZA1/MNlfsg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.0/plugins/BezierPlugin.min.js" integrity="sha512-plyexAULVlTExvDn2yUZFJV9F8q+53MC/GpU9dEuNGXmrrI3J8Rcffjvxg3OOBALBvF+UILPLIBEoCeF2maqTQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="main.js"></script>
 </body>
 </html>
