--- a/index.html
+++ b/index.html
@@ -8,17 +8,26 @@
     <title>Hudson</title>
 </head>
 <body>
+
     <nav>
-        <ul>
+
+        <ul class="nav-links">
             <li><a id="first-child" href="#home">Home</a></li>
             <li><a href="#about-me">About Me</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact-me">Contact Me</a></li>
         </ul>
+
+        <div class="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
     </nav>
     <div class="animation">
         <img class="paper-plane" src="./resources/images/paper-plane-vector-logo_166426-original.png" alt="Paper Plane">
     </div>
+
     <div class="container">
     <main>
         <section id="home">
@@ -30,16 +39,20 @@
                     <img src="./resources/images/Darrow.svg" alt="Down arrow" id="darrow">
                 </div>
             </div>
+
         </section>
         <section id="about-me">
             <h1>About Me</h1>
         </section>
+
         <section id="projects">
             <h1>Projects</h1>
         </section>
+
         <section id="contact-me">
             <h1>Contact Me</h1>
         </section>
+
     </main>
     </div>
 
