add basic about me page

--- a/index.html
+++ b/index.html
@@ -39,16 +39,24 @@
                 <img src="./resources/images/IMG_5840.JPG" alt="photo of me" id="my-photo">
                 <div id='text-container'>
                     <h1>Hi, I'm Hudson</h1>
-                    <p class="text">I'm a <span class="blue">programmer</span> and <span class="blue">graphic designer</span> based in California. Click below to check out my <span class="blue">portfolio</span>, and see what I'm capable of!</p>
+                    <p>I'm a <span class="blue">programmer</span> and <span class="blue">graphic designer</span> based in California. Click below to check out my <span class="blue">portfolio</span>, and see what I'm capable of!</p>
                     <img src="./resources/images/Darrow.svg" alt="Down arrow" id="darrow">
                 </div>
-            
             </div>
+        </section>
 
-        </section>
         <section id="about-me">
-            <h1>About Me</h1>
+                <img src="./resources/images/Cool photo ( blur ).JPG" alt="photo of me" id="my-photo2">
+                <div id='text-container2'></div>
+                    <div id="about-mobile container">
+                        <img src="./resources/images/Cool Photo ( mobile ).png" alt="photo of me" id="my-photo-mobile">
+                        <h1>About Me</h1>
+                    </div>
+                    <p class="text">Hi. My name is Hudson and 15 I’m years old. I picked up coding a little less than a year ago, but really got into it when COVID hit. I’m an aspiring developer and coder. I’m currently trying to learn as much as I can, and rigt now my focus is web development. I code everyday, and it is what I want to do when I am older. As hobbies, I like to code (obviously), play soccer with my brother and for my club, speedcube, eat ramen and play videos games.</p>
+                </div>
         </section>
+
+        
 
         <section id="projects">
             <h1>Projects</h1>
