make darrow hover

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div id='text-container'>
                     <h1>Hi, I'm Hudson</h1>
                     <p>I'm a <span class="blue">programmer</span> and <span class="blue">graphic designer</span> based in California. Click below to check out my <span class="blue">portfolio</span>, and see what I'm capable of!</p>
-                    <img src="./resources/images/Darrow.svg" alt="Down arrow" id="darrow">
+                    <img src="./resources/images/Darrow.svg" alt="Down arrow" id="darrow" class="floating">
                 </div>
             </div>
         </section>
