--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div id='text-container'>
                     <h1>Hi, I'm Hudson</h1>
                     <p>I'm a <span class="blue">programmer</span> and <span class="blue">graphic designer</span> based in California. Click below to check out my <span class="blue">portfolio</span>, and see what I'm capable of!</p>
-                    <img src="./resources/images/Darrow.svg" alt="Down arrow" id="darrow" class="floating">
+                    <img src="./resources/images/Darrow.svg" alt="Down arrow" id="darrow">
                 </div>
             </div>
         </section>
@@ -53,8 +53,6 @@
                 <p>Hi. My name is Hudson and 15 I’m years old. I picked up coding a little less than a year ago, but really got into it when COVID hit. I’m an aspiring developer and coder. I’m currently trying to learn as much as I can, and rigt now my focus is web development. I code everyday, and it is what I want to do when I am older. As hobbies, I like to code (obviously), play soccer with my brother and for my club, speedcube, eat ramen and play videos games.</p>
             </div>
         </section>
-
-        
 
         <section id="projects">
             <h1>Projects</h1>
