--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a href="#about-me">About Me</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact-me">Contact Me</a></li>
+            <li><a href="#more">More</a></li>
         </ul>
 
         <div class="burger">
@@ -60,6 +61,10 @@
 
         <section id="contact-me">
             <h1>Contact Me</h1>
+        </section>
+
+        <section id="more">
+            <h1>More</h1>
         </section>
 
     </main>
