add programming projects section

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./resources/style.css" type="text/css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,900&display=swap" rel="stylesheet">
     <title>Hudson</title>
 </head>
 <body>
@@ -54,9 +54,62 @@
                 <p>Hi. My name is Hudson and 15 I’m years old. I picked up coding a little less than a year ago, but really got into it when COVID hit. I’m an aspiring developer and coder. I’m currently trying to learn as much as I can, and rigt now my focus is web development. I code everyday, and it is what I want to do when I am older. As hobbies, I like to code (obviously), play soccer with my brother and for my club, speedcube, eat ramen and play videos games.</p>
             </div>
         </section>
+        <br>
 
         <section id="projects">
-            <h1>Projects</h1>
+                <h1>Projects</h1>
+                <h2>check out a few of my most recent projects here</h2>
+                <h3>Programming</h3>
+                <div class="projects-container-programming">
+                    <div class="project-box">
+                        <img src="./resources/images/Fun Fact Generator.png" alt="fun fact generator">
+                        <p>A Fun Fact Generator that I Created</p>
+                        <i class="fab fa-github" id="github"></i>
+                        <i class="fas fa-external-link-alt" id="external-link"></i>
+                    </div>
+                    <div class="project-box">
+                        <img src="./resources/images/Number Guesser.png" alt="number guesser">
+                        <p>A Random Number Guesser</p>
+                        <i class="fab fa-github" id="github"></i>
+                        <i class="fas fa-external-link-alt" id="external-link"></i>
+                    </div>
+                    <div class="project-box">
+                        <img src="./resources/images/Fenyx website.jpg" alt="fenyx website">
+                        <p>An old Portfolio Type Website</p>
+                        <i class="fab fa-github" id="github"></i>
+                        <i class="fas fa-external-link-alt" id="external-link"></i>
+                    </div>
+                    <div class="project-box">
+                        <img src="./resources/images/Cubing Site.png" alt="cubing website">
+                        <p>Fake speedcubing club landing page</p>
+                        <i class="fab fa-github" id="github"></i>
+                        <i class="fas fa-external-link-alt" id="external-link"></i>
+                    </div>
+                    <div class="project-box">
+                        <img src="./resources/images/Colmar Academy.png" alt="colmar academy">
+                        <p>University Landing Page</p>
+                        <i class="fab fa-github" id="github"></i>
+                        <i class="fas fa-external-link-alt" id="external-link"></i>
+                    </div>
+                </div>
+                <h3>Graphic Design</h3>
+                <div class="projects-container-design">
+                    <div class="project-box">
+                        <img src="./resources/images/Website XD prototype.png" alt="disney xd prototype">
+                    </div>
+                    <div class="project-box">
+                        <img src="./resources/images/Ramen - Coding.png" alt="ramen coding">
+                    </div>
+                    <div class="project-box">
+                        <img src="./resources/images/Adidas-Banner V1.jpg" alt="disney x nike collab banner">
+                    </div>
+                    <div class="project-box">
+                        <img src="./resources/images/Cool photo - Lines.jpg" alt="photo of me">
+                    </div>
+                    <div class="project-box">
+                        <img src="./resources/images/Warhol Grid.jpg" alt="Leslie odom jr warhol grid">
+                    </div>
+                </div>
         </section>
 
         <section id="contact-me">
@@ -79,5 +132,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/plugins/CSSPlugin.min.js" integrity="sha512-ocsFo48WU8Xq6Y1Lwi7psXRAujG9E4TKNR4q1DbrKzaaxOMTEoao/a+mDoB+cYzY4lwbyxvqjkp/ZA1/MNlfsg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/plugins/BezierPlugin.min.js" integrity="sha512-plyexAULVlTExvDn2yUZFJV9F8q+53MC/GpU9dEuNGXmrrI3J8Rcffjvxg3OOBALBvF+UILPLIBEoCeF2maqTQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./main.js"></script>
+
+<!-- GSAP -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js" defer></script>
+
+<!-- fontawesome -->
+<script src="https://kit.fontawesome.com/422121cfad.js" crossorigin="anonymous"></script>
 </body>
 </html>
