start image styling design section

--- a/index.html
+++ b/index.html
@@ -94,21 +94,11 @@
                 </div>
                 <h3>Graphic Design</h3>
                 <div class="projects-container-design">
-                    <div class="project-box">
-                        <img src="./resources/images/Website XD prototype.png" alt="disney xd prototype">
-                    </div>
-                    <div class="project-box">
-                        <img src="./resources/images/Ramen - Coding.png" alt="ramen coding">
-                    </div>
-                    <div class="project-box">
-                        <img src="./resources/images/Adidas-Banner V1.jpg" alt="disney x nike collab banner">
-                    </div>
-                    <div class="project-box">
-                        <img src="./resources/images/Cool photo - Lines.jpg" alt="photo of me">
-                    </div>
-                    <div class="project-box">
-                        <img src="./resources/images/Warhol Grid.jpg" alt="Leslie odom jr warhol grid">
-                    </div>
+                        <img src="./resources/images/Website XD prototype.png" alt="disney xd prototype" id="design-one">
+                        <img src="./resources/images/Ramen - Coding.png" alt="ramen coding" id="design-two">
+                        <img src="./resources/images/Adidas-Banner V1.jpg" alt="disney x nike collab banner" id="design-three">
+                        <img src="./resources/images/Cool photo - Lines.jpg" alt="photo of me" id="design-four">
+                        <img src="./resources/images/Warhol Grid.jpg" alt="Leslie odom jr warhol grid" id="design-five">
                 </div>
         </section>
 
