add mobile version for projects. still need to add ipad version

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                     <div class="project-box">
                         <img src="./resources/images/Fun Fact Generator.png" alt="fun fact generator">
                         <p>A Fun Fact Generator that I Created</p>
-                        <i class="fab fa-github" id="github"></i>
-                        <i class="fas fa-external-link-alt" id="external-link"></i>
+                        <i class="fab fa-github" id="github"><a href="https://github.com/Hmcg23/mixed-messages" target="_blank"></a></i>
+                        <i class="fas fa-external-link-alt" id="external-link"><a href="https://hmcg23.github.io/mixed-messages/" target="_blank"></a></i>
                     </div>
                     <div class="project-box">
                         <img src="./resources/images/Number Guesser.png" alt="number guesser">
@@ -109,7 +109,6 @@
         <section id="more">
             <h1>More</h1>
         </section>
-
     </main>
     </div>
 
