add basic contact me section

--- a/index.html
+++ b/index.html
@@ -103,7 +103,15 @@
         </section>
 
         <section id="contact-me">
-            <h1>Contact Me</h1>
+            <div class="plane-and-circle">
+                <h1>Contact Me</h1>
+                <img src="./resources/images/plane icon.svg" alt="plane icon">
+                <div id="circle-icon"></div>
+            </div>
+            <div class="email-text-container">
+                <h2>hudsonbusiness@gmail.com</h2>
+                <h2 id="copy-text">Click to copy!</h2>
+            </div>
         </section>
 
         <section id="more">
