add plane animation

--- a/index.html
+++ b/index.html
@@ -113,10 +113,15 @@
                 <h2 id="copy-text">Click to copy!</h2>
             </div>
         </section>
-
+        <!--
         <section id="more">
             <h1>More</h1>
         </section>
+    -->
+    <div class="copyright">
+        <h1>&copy; Hudson 2021</h1>
+    </div>
+
     </main>
     </div>
 
