--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <main>
         <section id="home">
             <div id="home-container">
-                <img src="./resources/images/IMG_5840.JPG" alt="photo of me" id="my-photo">
+                <img src="./resources/images/IMG_0280.jpeg" alt="photo of me" id="my-photo">
                 <div id='text-container'>
                     <h1>Hi, I'm Hudson</h1>
                     <p>I'm a <span class="blue">programmer</span> and <span class="blue">graphic designer</span> based in California. Click below to check out my <span class="blue">portfolio</span>, and see what I'm capable of!</p>
