--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="animation">
         <img class="paper-plane" src="./resources/images/paper-plane-vector-logo_166426-original.png" alt="Paper Plane">
     </div>
--->
+--> 
     <div class="cover"></div>
     <div class="container">
     <main>
@@ -54,7 +54,7 @@
             <div id='text-container2'>
                 <img src="./resources/images/Cool Photo ( mobile ).png" alt="photo of me" id="my-photo-mobile">
                 <h1>About Me</h1>
-                <p>Hi. My name is Hudson and 15 I’m years old. I picked up coding a little less than a year ago, but really got into it when COVID hit. I’m an aspiring developer and coder. I’m currently trying to learn as much as I can, and rigt now my focus is web development. I code everyday, and it is what I want to do when I am older. As hobbies, I like to code (obviously), play soccer with my brother and for my club, speedcube, eat ramen and play videos games.</p>
+                <p>Hi. My name is Hudson and I’m 16 years old. I picked up coding a few over a year ago, but really got into it when COVID hit. I’m an aspiring developer and coder. I’m currently trying to learn as much as I can, and rigt now my focus is web development. I code everyday, and it is what I want to do when I am older. As hobbies, I like to code (obviously), play soccer with my brother and for my club, speedcube, eat ramen and play videos games.</p>
             </div>
         </section>
         <br>
